--- a/EnterpriseDirect/Components/_Imports.razor
+++ b/EnterpriseDirect/Components/_Imports.razor
@@ -10,3 +10,6 @@
 @using EnterpriseDirect
 @using EnterpriseDirect.Client
 @using EnterpriseDirect.Components
+@using System.Text
+@using EnterpriseDirect.Services
+@using EnterpriseDirect.Shared.Models
